--- a/projects/angular/src/accordion/_accordion.clarity.scss
+++ b/projects/angular/src/accordion/_accordion.clarity.scss
@@ -240,6 +240,10 @@
     }
   }
 
+  .clr-accordion-panel-disabled .clr-accordion-title {
+    @include css-var(color, clr-accordion-panel-disabled-color, $clr-accordion-text-color, $clr-use-custom-properties);
+  }
+
   .clr-accordion-panel-error .clr-accordion-number,
   .clr-accordion-panel-complete .clr-accordion-number {
     @include screen-reader-only();
